--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 PORT=4002
 MONGODB_URI=mongodb+srv://lata:lata@cluster0.zu4p86m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
+NODE_ENV ="production"
